tests/machine/x/go/outer_join.error
Error on line 0: output mismatch
-- got --
--- Outer Join using syntax ---
Order 100 by Alice - $ 250
Order 101 by Bob - $ 125
Order 102 by Alice - $ 300
Order 103 by  - $ 80
Order 0 by Charlie - $ 0
Order 0 by Diana - $ 0
-- want --
--- Outer Join using syntax ---
Order 100 by Alice - $ 250
Order 101 by Bob - $ 125
Order 102 by Alice - $ 300
Order 103 by Unknown - $ 80
Customer Charlie has no orders
Customer Diana has no orders
1: //go:build ignore
